# NOAA-Data

./: CHANGELOG.md  LICENSE  NOAA.cabal  data1.json
app/: DataJSON.hs  DataUtil.hs  Main.hs
app/Models/: DataJSON.hs
app/Utils/: DataUtil.hs
app/Views/: ViewMain.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
